feat: Ajout fichier pour TP Authentification
