# src/controllers/author.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch } from "tsoa";
+import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch, Security } from "tsoa";
 import { authorService } from "../services/author.service";
 import { AuthorDTO } from "../dto/author.dto";
 import { Author } from "../models/author.model";
@@ -6,6 +6,7 @@ import { CustomError } from "../middlewares/errorHandler";
 
 @Route("authors")
 @Tags("Authors")
+@Security("jwt", ["write", "read"])
 export class AuthorController extends Controller {
   // Récupère tous les auteurs
   @Get("/")
@@ -17,7 +18,7 @@ export class AuthorController extends Controller {
   @Get("{id}")
   public async getAuthorById(@Path() id: number): Promise<AuthorDTO> {
     let author: Author | null = await authorService.getAuthorById(id);
-    if(author === null) {
+    if (author === null) {
       let error: CustomError = new Error("Author not found");
       error.status = 404;
       throw error;
@@ -32,8 +33,10 @@ export class AuthorController extends Controller {
     @Body() requestBody: AuthorDTO
   ): Promise<AuthorDTO> {
     const { firstName, lastName } = requestBody;
-    if(!firstName || !lastName) {
-      let error: CustomError = new Error("First name and last name are required");
+    if (!firstName || !lastName) {
+      let error: CustomError = new Error(
+        "First name and last name are required"
+      );
       error.status = 400;
       throw error;
     }
@@ -46,7 +49,9 @@ export class AuthorController extends Controller {
     try {
       await authorService.deleteAuthor(id);
     } catch (SequelizeForeignKeyConstraintError) {
-      let error: CustomError = new Error("Cannot delete author with associated books");
+      let error: CustomError = new Error(
+        "Cannot delete author with associated books"
+      );
       error.status = 409;
       throw error;
     }
@@ -59,19 +64,21 @@ export class AuthorController extends Controller {
     @Body() requestBody: AuthorDTO
   ): Promise<AuthorDTO> {
     const { firstName, lastName } = requestBody;
-    if(!firstName || !lastName) {
-      let error: CustomError = new Error("First name and last name are required");
+    if (!firstName || !lastName) {
+      let error: CustomError = new Error(
+        "First name and last name are required"
+      );
       error.status = 400;
       throw error;
     }
     let author = await authorService.updateAuthor(id, firstName, lastName);
 
-    if(author === null) {
+    if (author === null) {
       let error: CustomError = new Error("Author not found");
       error.status = 404;
       throw error;
     }
-    
+
     return author;
   }
 }
